Revision history for {{$dist->name}}

{{$NEXT}}
  - rm Test::Strict on cygwin for real
    (not just doco of it)

0.24      2012-10-25 16:28:33 America/New_York
  - rm Test::Strict on cygwin

0.23      2012-10-25 16:25:30 America/New_York
  - rm Data::Downloader on cygwin
  - fixup AnyEvent::Open3::Simple

0.22      2012-10-25 16:18:36 America/New_York
  - don't install modules under Cygwin and MSWin32 that I know don't work there.
  - added Devel::StackTrace
  - added Clustericious::Client
  - added Clustericious::Config
  - added Clustericious::Log
  - added Rose::Planter
  - added String::Template

0.21      2012-10-24 13:41:44 America/New_York
  - added AnyEvent::Open3::Simple
  - added Lingua::Alphabet::Phonetic::LAPD
  - added Mojolicious::Plugin::Ident

0.2       2012-08-29 08:09:14 EST5EDT
  - remove Test::Strict (doesn't seem to like windows)

0.1       2012-08-11 13:14:39 America/New_York
  - initial version